# ai_agents_frameworks_comparison

./: .gitignore  README.md  notes.md  pyproject.toml
ai_agents_frameworks_comparison/: __init__.py  scripts.py
data/: ai_watch.db  tech_influencers.json  yann_lecuns_paper_response.json
langgraph/: README.md  main.py  pyproject.toml
langgraph/src/technology_scout/: __init__.py  agent.py  main.py
langgraph/src/technology_scout/tools/: __init__.py  query_papers_with_code.py  select_from_db.py
langgraph/tests/: __init__.py  test_agent.py
langgraph/tests/test_tools/: __init__.py  test_query_papers_with_code.py  test_select_from_db.py
llama-index/: pyproject.toml
llama-index/src/technology_scout/: agent.py  agent_workflow.py  main.py
llama-index/src/technology_scout/tools/: query_papers_with_code.py  select_from_db.py
llama-index/tests/: test_agent.py  test_agent_workflow.py
llama-index/tests/tests_tools/: test_query_papers_with_code.py  test_select_from_db.py
scripts/: check_nb_response.ipynb  pyproject.toml  scrap_tech_influencers.py  visualize_db.ipynb
smolagents/: pyproject.toml
smolagents/src/technology_scout/: agent.py  main.py  observer.py  tools.py
smolagents/src/technology_scout/tools/: query_papers_with_code.py  select_from_db.py
smolagents/tests/: test_agent.py  test_tools.py
smolagents/tests/test_tools/: test_query_papers_with_code.py
