[project]
name = "ai-agents-frameworks-comparison"
version = "0.1.0"
description = "Package to compare various AI agents frameworks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangGraph dependencies
    "langgraph>=0.4.8",
    "langchain-openai>=0.1.0", 
    "langchain-core>=0.1.0",
    "pandas>=2.0.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    # LlamaIndex dependencies
    "ansi2html>=1.9.2",
    "gradio>=5.34.0",
    "llama-index>=0.12.42",
    "llama-index-packs-gradio-agent-chat>=0.3.0",
    # Smolagents dependencies
    "duckduckgo-search>=8.0.4",
    "openinference-instrumentation-smolagents>=0.1.13",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "smolagents[gradio,litellm,telemetry]>=1.17.0",
]

[dependency-groups]
dev = [
    # Testing dependencies
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    # Development dependencies
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ai_agents_frameworks_comparison",
    "langgraph/src",
    "llama-index/src", 
    "smolagents/src"
]

[project.scripts]
test-langgraph = "ai_agents_frameworks_comparison.scripts:test_langgraph"
test-llama-index = "ai_agents_frameworks_comparison.scripts:test_llama_index"
test-smolagents = "ai_agents_frameworks_comparison.scripts:test_smolagents"
test-all = "ai_agents_frameworks_comparison.scripts:test_all"
