[project]
name = "technology_scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "smolagents[gradio,litellm]>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]
